# JoyShockMapper

./: JoyShockMapper.sln  README.md
JoyShockMapper/: .clang-format  CMakeLists.txt  JoyShockMapper.vcxproj  cpp.hint
JoyShockMapper/include/: DigitalButton.h  Gamepad.h  InputHelpers.h  JoyShockContext.h  JoyShockMapper.h  Joystick.h  JslWrapper.h  Whitelister.h  inputHelpers.cpp  main.h  pocket_fsm.h
JoyShockMapper/libs/: JoyShockLibrary.lib
JoyShockMapper/src/: DigitalButton.cpp  Joystick.cpp  JslWrapper.cpp  Mapping.cpp  SDL2Wrapper.cpp  SDLWrapper.cpp  main.cpp
JoyShockMapper/src/win32/: Gamepad.cpp  InputHelpers.cpp  PlatformDefinitions.cpp  Whitelister.cpp
JoyShockMapper/unittest/: CMakeLists.txt  MockLog.hpp  gmock_main.cpp  mockGamepad.cpp  mockGamepad.hpp  mockInputHelpers.hpp  mockJslWrapper.hpp  mockWhitelister.hpp  testDigitalButton.cpp  testRegression.cpp  test_project1.cpp
